--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -244,6 +244,7 @@
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										//
 										events.fireToPageNone('../mine.html','infoChanged');
+										events.fireToPageNone('../cloud/cloud_home.html','infoChanged');
 										console.log('登录保存的个人信息：' + JSON.stringify(tempInfo))
 											//跳到主界面
 										events.openNewWindowWithData('../index/index.html', '');
@@ -402,6 +403,7 @@
 									window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
 									//
 									events.fireToPageNone('../mine.html','infoChanged');
+									events.fireToPageNone('../cloud/cloud_home.html','infoChanged');
 									//存储自动登录
 									//									loginInfo.auto = 1;
 									//									window.myStorage.setItem(window.storageKeyName.AUTOLOGIN, loginInfo);
