--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -198,7 +198,7 @@
 									//当前循环的model
 									var tempModel0 = tempRspData[item];
 									//对比id是否一致
-									if (tempModel0.utid == tempModel.UserId) {
+									if (tempModel0.UserId == tempModel.utid) {
 										//合并
 										tempModel0 = $.extend(tempModel0, tempModel);
 									}
