--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -6,20 +6,20 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/utils/bubble.css" rel="stylesheet"  />
+		<link href="../../css/utils/bubble.css" rel="stylesheet" />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
-		
+
 	</head>
 
 	<body>
-		
+
 		<!--下拉刷新容器-->
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-		  <div class="mui-scroll">
-		    <!--数据列表-->
-		    <ul id="classSpace_list" class="mui-table-view">
-		    </ul>
-		  </div>
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<ul id="classSpace_list" class="mui-table-view">
+				</ul>
+			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript">
@@ -28,6 +28,8 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/storageKeyName.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/utils/urlBrief.js"></script>
 		<script src="../../js/quan/class_space.js"></script>
 	</body>
+
 </html>
