群头像问题

--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -23,10 +23,11 @@
 			var datasource = []; //底部列表数据
 			var topStudentArr=[];
 			var topArray = []; //顶部班级列表数据
-			var requestTimes; //记录班级空间请求次数--等于0时，请求完毕，刷新界面
-			var requestTimes2; //记录群用户列表请求次数--等于0时，请求完毕，刷新界面
-			var requestTimes3;
+			var requestTimes=0; //记录班级空间请求次数--等于0时，请求完毕，刷新界面
+			var requestTimes2=0; //记录群用户列表请求次数--等于0时，请求完毕，刷新界面
+			var requestTimes3=0;
 			var isRefresh = 0; //是否下拉刷新--1：下拉刷新 0：不是下拉刷新
+			var selectCell = {};//选择的cell
 		</script>
 		<style type="text/css">
 			/*自定义系统segmentcontrol控件*/
