退群剔除项错误的bug

--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -235,7 +235,7 @@
 						return false;
 					}
 				})
-				groupRoles.splice(groupRoles.indexOf(roleInfo), 1);
+//				groupRoles.splice(groupRoles.indexOf(roleInfo), 1);
 				console.log('退组后的身份信息：'+JSON.stringify(groupRoles));
 				getGroupInfo(roleInfo.mstype);
 				events.fireToPageNone('../quan/tab-zone.html', 'quitGroup');
